src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail36.jova

class Test{
    Test(String x, int y){

    }
    Test(String s, int z){

    }
}